src2/objects/MachineConfiguration__mdt.object
<CustomObject>
    <description>Machine Configurations for next Descaling and next Filter change</description>
    <fields>
        <fullName>NextDescalingHard_L__c</fullName>
        <defaultValue>420</defaultValue>
        <description>Water considered for next descaling (420L  for hard water, 560L for medium and 840L for soft water).</description>
        <label>Next Descaling Hard(L)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextDescalingMedium_L__c</fullName>
        <defaultValue>560</defaultValue>
        <description>Water considered for next descaling (420L  for hard water, 560L for medium and 840L for soft water).</description>
        <label>Next Descaling Medium(L)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextDescalingSoft_L__c</fullName>
        <defaultValue>840</defaultValue>
        <description>Water considered for next descaling (420L  for hard water, 560L for medium and 840L for soft water)</description>
        <label>Next Descaling Soft(L)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextFilterHard_L__c</fullName>
        <defaultValue>80</defaultValue>
        <description>Water considered for next filter change (80L  for hard water, 150L for medium and 220L for soft water)</description>
        <label>Next Filter Hard(L)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextFilterMedium_L__c</fullName>
        <defaultValue>150</defaultValue>
        <description>Water considered for next filter change (80L  for hard water, 150L for medium and 220L for soft water)</description>
        <label>Next Filter Medium(L)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextFilterSoft_L__c</fullName>
        <defaultValue>220</defaultValue>
        <description>Water considered for next filter change (80L  for hard water, 150L for medium and 220L for soft water)</description>
        <label>Next Filter Soft(L)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Machine Configuration</label>
    <pluralLabel>Machine Configuration</pluralLabel>
</CustomObject>